tests/snapshots/examples_fixtures/aoc__2024__day07_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day07_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:23:5
   |
23 |     assert_eq(Day07.day07a(sample_lines()), 3749)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:28:5
   |
28 |     assert_eq(Day07.day07b(sample_lines()), 11387)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:33:5
   |
33 |     assert_eq(Day07.day07a([|"190: 10 19"|]), 190)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:38:5
   |
38 |     assert_eq(Day07.day07a([|"29: 10 19"|]), 29)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:43:5
   |
43 |     assert_eq(Day07.day07a([|"83: 17 5"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:49:5
   |
49 |     assert_eq(Day07.day07a([|"15: 10 5"|]), 15)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:51:5
   |
51 |     assert_eq(Day07.day07a([|"50: 10 5"|]), 50)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:53:5
   |
53 |     assert_eq(Day07.day07a([|"11: 10 5"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:58:5
   |
58 |     assert_eq(Day07.day07a([|"292: 11 6 16 20"|]), 292)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:64:5
   |
64 |     assert_eq(Day07.day07a([|"156: 15 6"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:65:5
   |
65 |     assert_eq(Day07.day07b([|"156: 15 6"|]), 156)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:70:5
   |
70 |     assert_eq(Day07.day07a([|"7290: 6 8 6 15"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:71:5
   |
71 |     assert_eq(Day07.day07b([|"7290: 6 8 6 15"|]), 7290)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:76:5
   |
76 |     assert_eq(Day07.day07a([|"192: 17 8 14"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:77:5
   |
77 |     assert_eq(Day07.day07b([|"192: 17 8 14"|]), 192)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:82:5
   |
82 |     assert_eq(Day07.day07a([|"5: 5"|]), 5)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:83:5
   |
83 |     assert_eq(Day07.day07a([|"5: 3"|]), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day07_test.flx:88:5
   |
88 |     assert_eq(Day07.day07a([|"190: 10 19", "", "29: 10 19"|]), 219)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 18 errors.
== stdout ==
<not executed>
